--- a/frontend/vision_mate_app/pubspec.yaml
+++ b/frontend/vision_mate_app/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   # UI and Accessibility
   vibration: ^2.0.0
   
+  # AR and Depth Sensing
+  arkit_plugin: ^0.11.0
+  device_info_plus: ^10.1.2
+  
   # Utilities
   path_provider: ^2.1.4
   shared_preferences: ^2.3.2
